syntax = "proto3";

package simple.grpc.v1;

option go_package = ".;pb";

message GetInfoRequest {
     int64 id = 1;
}

message Person {
    string name = 1;
    int64 age = 2;
    int64 id = 3;
}

message GetInfoResponse {
    int64 statusCode = 1;
    Person person = 2;
}

service HelloService {
    rpc getInfo(GetInfoRequest) returns (GetInfoResponse);
}